--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "journaling-app",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "20.19.0",
+    "npm": ">=10.8.2"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
