feat: setup e2e with cypress.

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "start": "next start",
     "lint": "next lint",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "cypress:open": "cypress open"
   },
   "dependencies": {
     "@prisma/client": "^6.5.0",
