--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint-config-next": "15.2.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "next-swagger-doc": "^0.4.1",
     "supertest": "^7.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5"
