--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
   },
   "dependencies": {
     "@prisma/client": "^6.5.0",
+    "@types/swagger-ui-react": "^5.18.0",
     "next": "15.2.3",
     "pg": "^8.14.1",
     "prisma": "^6.5.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "swagger-ui-react": "^5.20.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
