--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "lint": "next lint",
     "test": "jest",
     "test:watch": "jest --watch",
-    "cypress:open": "cypress open"
+    "cypress:open": "cypress open",
+    "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
     "@prisma/client": "^6.5.0",
