--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
   "dependencies": {
     "@prisma/client": "^6.5.0",
     "@types/swagger-ui-react": "^5.18.0",
+    "bcrypt": "^5.1.1",
+    "jsonwebtoken": "^9.0.2",
     "next": "15.2.3",
+    "next-auth": "^4.24.11",
     "pg": "^8.14.1",
     "prisma": "^6.5.0",
     "react": "^19.0.0",
