--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20.17.25",
     "@types/react": "^19",
     "@types/react-dom": "^19",
