--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20.17.25",
     "@types/react": "^19",
     "@types/react-dom": "^19",
