feat: create generatedSecrets helper method and add it to package.json script for generating ACCESS_TOKEN_SECRET and REFRESH_TOKEN_SECRET in .env file

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "generate-secrets": "node scripts/generateSecrets.js",
     "test": "jest",
     "test:watch": "jest --watch",
     "cypress:open": "cypress open"
