--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "@tailwindcss/postcss": "^4.0.15",
     "@types/swagger-ui-react": "^5.18.0",
     "bcrypt": "^5.1.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.483.0",
     "next": "15.2.3",
     "next-auth": "^4.24.11",
     "pg": "^8.14.1",
@@ -33,7 +36,9 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "swagger-ui-react": "^5.20.1",
-    "tailwindcss": "^4.0.15"
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss": "^4.0.15",
+    "tw-animate-css": "^1.2.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
