--- a/package.json
+++ b/package.json
@@ -34,14 +34,12 @@
     "next": "15.2.3",
     "next-auth": "^4.24.11",
     "pg": "^8.14.1",
-    "postcss": "^8.5.3",
     "prisma": "^6.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "swagger-ui-react": "^5.20.1",
     "tailwind-merge": "^3.0.2",
-    "tailwindcss": "^4.0.15",
     "tw-animate-css": "^1.2.4",
     "zod": "^3.24.2"
   },
@@ -55,13 +53,16 @@
     "@types/node": "^20.17.25",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.21",
     "cypress": "^14.2.0",
     "eslint": "^9",
     "eslint-config-next": "15.2.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "next-swagger-doc": "^0.4.1",
+    "postcss": "^8.5.3",
     "supertest": "^7.1.0",
+    "tailwindcss": "^4.0.15",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2"
   }
