--- a/package.json
+++ b/package.json
@@ -33,11 +33,13 @@
     "lucide-react": "^0.483.0",
     "next": "15.2.3",
     "next-auth": "^4.24.11",
+    "next-themes": "^0.4.6",
     "pg": "^8.14.1",
     "prisma": "^6.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "sonner": "^2.0.1",
     "swagger-ui-react": "^5.20.1",
     "tailwind-merge": "^3.0.2",
     "tw-animate-css": "^1.2.4",
