--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.483.0",
     "next": "15.2.3",
@@ -40,6 +41,7 @@
     "pg": "^8.14.1",
     "prisma": "^6.5.0",
     "react": "^19.0.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "sonner": "^2.0.1",
