--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,7 @@
       "@/*": ["./src/*"]
     },
     "typeRoots": ["./node_modules/@types", "./src/types"],
-    "types": ["jest", "@testing-library/jest-dom", "node", "date-fns"]
+    "types": ["jest", "@testing-library/jest-dom", "node"]
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
